--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Git San Tar Par</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem debitis explicabo illum omnis non ut, maiores quidem sequi rerum! Facilis voluptatem vel, architecto aliquid necessitatibus illo unde itaque cupiditate omnis!</p>
     <script src="js/app.js"></script>
 </body>
 </html>
